# little-bell

./: .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  MONITORING.md  README.md  USAGE.md  docker-compose.yml
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  main_old.rs
src/database/: mod.rs
templates/: dashboard.html
tests/: integration_tests.rs
