[package]
name = "little-bell"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
askama = "0.12"
tower-http = { version = "0.5", features = ["compression-br", "trace", "cors"] }
envy = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
thiserror = "1.0"

[dev-dependencies]
tower = "0.5"
hyper = "1.0"
axum-test = "16.0"
urlencoding = "2.1"
